force-app/main/default/objects/Property__c/fields/Apartment_Complex__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Complex__c</fullName>
    <label>Apartment Complex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>