force-app/main/default/objects/Property__c/fields/Building_Floor__c.field-meta.xml
<CustomField>
    <fullName>Building_Floor__c</fullName>
    <description>On what floor of the building is this apartment located?</description>
    <label>Building Floor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>