force-app/main/default/objects/Property__c/fields/Desired_Rent__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rent__c</fullName>
    <label>Desired Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>