force-app/main/default/objects/Property__c/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this building have an elevator?</description>
    <label>Elevator</label>
    <type>Checkbox</type>
</CustomField>