force-app/main/default/objects/Property__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <description>Name of the Homeowner&apos;s Association for this property.</description>
    <label>HOA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>