force-app/main/default/objects/Property__c/fields/Include_in_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this property currently on the market for a tenant?</description>
    <inlineHelpText>Is this property currently on the market for a tenant?</inlineHelpText>
    <label>Include in Marketing</label>
    <type>Checkbox</type>
</CustomField>