force-app/main/default/objects/Property__c/fields/Key_Fob_Entry__c.field-meta.xml
<CustomField>
    <fullName>Key_Fob_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the building require a key fob or similar means of entry?</description>
    <label>Key Fob Entry</label>
    <type>Checkbox</type>
</CustomField>