force-app/main/default/objects/Property__c/fields/Management_Contract__c.field-meta.xml
<CustomField>
    <fullName>Management_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Contract</label>
    <referenceTo>Management_Contract__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>