force-app/main/default/objects/Property__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <description>Neighborhood or development complex in which the property is located.</description>
    <label>Neighborhood</label>
    <length>50</length>
    <type>Text</type>
</CustomField>