force-app/main/default/objects/Property__c/recordTypes/House.recordType-meta.xml
<RecordType>
    <fullName>House</fullName>
    <active>true</active>
    <label>House</label>
</RecordType>