force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Property_Manager__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>