force-app/main/default/objects/Property__c/listViews/Apartment.listView-meta.xml
<ListView>
    <fullName>Apartment</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Property_Manager__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Apartment</value>
    </filters>
    <label>Apartment</label>
</ListView>